--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 </head>
 <body>
 
+    <form>
+        <fieldset>
+            <legend>Connected Inputs</legend>
+            <p>Note: The range of number is between 0 and 100</p>
+            Number <input type="text" name="number_input" min="0" max="100" value="50"><br>
+            Range <input type="range" name="range_input" min="0" max="100" value="50">
+        </fieldset>
+    </form>
+
 <script type="text/javascript" src="form.js"></script>
 </body>
 </html>
