Captured input elements and add event listeners to change the inputs if either one changed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <form>
         <fieldset>
             <legend>Connected Inputs</legend>
-            <p>Note: The range of number is between 0 and 100</p>
-            Number <input type="text" name="number_input" min="0" max="100" value="50"><br>
-            Range <input type="range" name="range_input" min="0" max="100" value="50">
+            <p>Note: The range of numbers is between 0 and 100</p>
+            Number <input type="text" name="number_input" min="0" max="100" value="0"><br>
+            Range <input type="range" name="range_input" min="0" max="100" value="0">
         </fieldset>
     </form>
 
